// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getVersionType > should return the correct version type for v0.0.0--.0.20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v0.0.0-20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v0.0.0-20060102150405-hash  2`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v0.0.1-0.20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v0.0.5-0.20220116011046-fa5810519dcb  1`] = `
{
  "commitSha": "fa5810519dcb",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v1.0.0-20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v1.0.1-0.20060102150405-hash+metadata  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v1.2.3-pre.0.20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v1.2.4-0.20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v1.2.100000000000000000-0.20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v1.3.0-pre.0.20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v2.0.0-20060102150405-hash  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v2.0.1-0.20060102150405-hash+incompatible  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;

exports[`getVersionType > should return the correct version type for v2.3.0-pre.0.20060102150405-hash+incompatible  1`] = `
{
  "commitSha": "hash",
  "tag": undefined,
}
`;
